--- a/easy-notes/src/main/resources/application.properties
+++ b/easy-notes/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.h2.console.enabled=true
-spring.datasource.url = jdbc:mysql://localhost:3306/datatabase?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = mynewpassword
-spring.jpa.show-sql = true    
-database.driver=com.mysql.jdbc.Driver 
- spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-database.maxConnections=25  
- spring.main.allow-bean-definition-overriding=true 
-                                                                                        
+  spring.datasource.url = jdbc:mysql://localhost:3306/datatabase?useSSL= false
+  spring.datasource.username = root
+  spring.datasource.password = mynewpassword
+  spring.jpa.show-sql=true 
+  spring.jpa.hibernate.ddl-auto = create-drop
+  spring.main.allow-bean-definition-overriding=true 
+      
+                                                                                                 
