--- a/easy-notes/src/main/resources/application.properties
+++ b/easy-notes/src/main/resources/application.properties
@@ -1,8 +1,7 @@
   spring.datasource.url = jdbc:mysql://localhost:3306/datatabase?useSSL= false
   spring.datasource.username = root
   spring.datasource.password = mynewpassword
-  spring.jpa.show-sql=true 
-  spring.jpa.hibernate.ddl-auto = create-drop
-  spring.main.allow-bean-definition-overriding=true 
-      
-                                                                                                 
+  spring.jpa.show-sql=true       
+  spring.jpa.hibernate.hbm2ddl.auto=update     
+  spring.datasource.generate-unique-name=true 
+  spring.main.allow-bean-definition-overriding=true
