--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/database
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.hbm2ddl.auto=update 
-spring.jpa.hibernate.show-sql=true  
+srping.datasource.url=jdbc:mysql://localhost:3306/myreports  
+spring.datasource.username =root
+spring.datasource.password=password    
+spring.jpa.show-sql=true   
+spring.jpa.hibernate.hbm2ddl.auto=update   
