--- a/employees-timesheet/pom.xml
+++ b/employees-timesheet/pom.xml
@@ -8,57 +8,81 @@
 		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.employees.timesheet.core</groupId>
+	<groupId>com.employees.timesheet.core</groupId> 
 	<artifactId>employees-timesheet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>employees-timesheet</name>
 	<description>Demo project for Spring Boot</description>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+	 <properties>
+	         <java.version>1.8</java.version>
+    </properties> 
 
-	<dependencies>
-		<dependency>
+	<dependencies> 
+	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
+	</dependency>
+   
+    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId> 
+    </dependency>
+	<dependency> 
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-		<dependency>
+	</dependency>
+	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+	<dependency>
+      	     <groupId>com.fasterxml.jackson.datatype</groupId>
+        	 <artifactId>jackson-datatype-jsr310</artifactId>
+	</dependency>
+	   <dependency>
+ 				 <groupId>com.fasterxml.jackson.core</groupId>
+ 				 <artifactId>jackson-databind</artifactId>
+  			</dependency>
+  			<dependency>
+    		 <groupId>com.fasterxml.jackson.module</groupId>
+   			 <artifactId>jackson-module-mrbean</artifactId>
+   			
 		</dependency>
-
 		<dependency>
+    				<groupId>org.hibernate</groupId>
+   				 <artifactId>hibernate-core</artifactId>   
+  				
+		</dependency>
+	
+	<dependency> 
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
+	</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<artifactId>h2</artifactId>  
 			<scope>runtime</scope> 
-		</dependency>
-		<dependency>
-       <groupId>io.springfox</groupId>
-       <artifactId>springfox-swagger2</artifactId>
-       <version>2.4.0</version>
-   </dependency>
- 
+		</dependency> 
+	
+  <dependency>
+      		 <groupId>io.springfox</groupId> 
+       		<artifactId>springfox-swagger2</artifactId>
+       		<version>2.4.0</version>
+ 	 		 </dependency> 
    <dependency>
-       <groupId>io.springfox</groupId>
-       <artifactId>springfox-swagger-ui</artifactId>
-       <version>2.4.0</version>
-   </dependency>
-		<dependency>
+    		<groupId>io.springfox</groupId>
+       		<artifactId>springfox-swagger-ui</artifactId>
+      	    <version>2.4.0</version>
+   </dependency> 
+   
+	<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+	</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -71,7 +95,7 @@
 			<exclusions> 
 				<exclusion>
 					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
+					<artifactId>junit-vintage-engine</artifactId> 
 				</exclusion>
 			</exclusions>
 		</dependency>
