--- a/employees-timesheet/src/main/resources/application.properties
+++ b/employees-timesheet/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username =root
 spring.datasource.password =password
-spring.jpa.hibernate.ddl-auto =create  
-spring.jpa.hibernate.show-sql =true 
+spring.jpa.hibernate.ddl-auto =none
+logging.level.org.hibernate.sql = DEBUG 
+spring.jackson.serialization.fail-on-empty-beans=false  
+logging.level.org.hibernate.type = TRACE          
